--- a/fem.yml
+++ b/fem.yml
@@ -1,26 +1,43 @@
 - hosts: localhost
   become: true
-  # pre_tasks:
-  #   - name: Update cache
-  #     apt:
-  #       update_cache: true
+  pre_tasks:
+    - name: Update cache
+      apt:
+        update_cache: true
+      tags:
+      - node
+      - zsh
   tasks:
   - name: Install zsh
     apt: name=zsh
-  # - name: Chnage Shell
-  #   shell: chsh -s `which zsh`
-  # - name: Install ohmyzsh (plaese dont tell people i use this)
-  #   shell: curl -L https://raw.github.com/robbyrussell/oh-my-zsh/
-  # - name: Install the zsh plugin autosuggestions
-  #   ansible.builtin.git:
-  #     repo: 'https://github.com/zsh-users/zsh-autosuggestions.git'
-  #     dest: "~/.oh-my-zsh/plugins/zsh-autosuggestions"
+    tags:
+    - zsh
+  - name: Chnage Shell
+    shell: chsh -s `which zsh`
+    tags:
+    - zsh
+  - name: Install ohmyzsh (plaese dont tell people i use this)
+    shell: curl -L https://raw.github.com/robbyrussell/oh-my-zsh/
+  - name: Install the zsh plugin autosuggestions
+    ansible.builtin.git:
+      repo: 'https://github.com/zsh-users/zsh-autosuggestions.git'
+      dest: "~/.oh-my-zsh/plugins/zsh-autosuggestions"
+    tags:
+    - zsh
   # - name: update our zshrc
   #   shell: sed -i 's/(git/(git zsh-autosuggestions/' ~/.zshrc
-  # - name: install node
-  #   apt:
-  #     name: ['nodejs', 'npm']
-  # - name: Install n
-  #   npm: name=n
-  # - name: n 14
-  #   shell: n 14
+    tags:
+    - zsh
+  - name: install node
+    apt:
+      name: ['nodejs', 'npm']
+    tags:
+    - node
+  - name: Install n
+    npm:
+      name: n
+      global: true
+  - name: n 14
+    shell: n 14
+    tags:
+    - node
